--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -435,21 +435,21 @@
                                     </div>
                                 </div>
 
-                                <div class="form-group" *ngIf="!page.isExtURL">
-                                    <label>Body</label>
-                                    <ckeditor [formControl]="editPageForm.controls['body']"
-                                              [class.invalid]="!f.body.valid && f.body.touched"
-                                              [readonly]="false"
-                                              [config]="CkeditorConfig"
-                                              id="body"
-                                              name="body"
-                                              debounce="500">
-                                    </ckeditor>
-                                    <p class="help-block alert alert-warning text-center mt-1"
-                                       *ngIf="!f.body.valid && f.body.touched">
-                                        The <b>Body</b> with at least 100 characters is required!
-                                    </p>
-                                </div>
+                                <!--<div class="form-group" *ngIf="!page.isExtURL">-->
+                                    <!--<label>Body</label>-->
+                                    <!--<ckeditor [formControl]="editPageForm.controls['body']"-->
+                                              <!--[class.invalid]="!f.body.valid && f.body.touched"-->
+                                              <!--[readonly]="false"-->
+                                              <!--[config]="CkeditorConfig"-->
+                                              <!--id="body"-->
+                                              <!--name="body"-->
+                                              <!--debounce="500">-->
+                                    <!--</ckeditor>-->
+                                    <!--<p class="help-block alert alert-warning text-center mt-1"-->
+                                       <!--*ngIf="!f.body.valid && f.body.touched">-->
+                                        <!--The <b>Body</b> with at least 100 characters is required!-->
+                                    <!--</p>-->
+                                <!--</div>-->
 
 
                                 <ddw-admin-image-uploader-item *ngIf="!isExtURL"></ddw-admin-image-uploader-item>
