--- a/src/app/components/pages/register/register.component.html
+++ b/src/app/components/pages/register/register.component.html
@@ -55,14 +55,13 @@
             </span>
             <!-- * Text Section Top * -->
             <span [innerHTML]="tsTopBody"
-                  *ngIf="tsTopBody && !page.body"></span>
+                  *ngIf="tsTopBody && page.contentSectionTop && !page.body">
+            </span>
 
 
             <!-- * Call To Action * -->
-            <div class="row cta"
-                 *ngIf="cta && !page.body">
-                <div class="row pt-3"
-                     *ngIf="cta.title || cta.subtitle">
+            <div class="row cta" *ngIf="page.callToAction && cta && !page.body">
+                <div class="row pt-3" *ngIf="cta.title || cta.subtitle">
                     <div class="col-md-10 text-center mx-auto">
                         <h2>{{ cta.title }}</h2>
                         <p>{{ cta.subtitle }}</p>
@@ -70,7 +69,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-5 cta-left col-media">
-                        <iframe *ngIf="videoUrl"
+                        <iframe *ngIf="cta.videoUrl"
                                 allowfullscreen="allowfullscreen"
                                 frameborder="0"
                                 height="315"
@@ -78,7 +77,7 @@
                                 [src]="videoUrl">
                         </iframe>
                         <img [src]="imageUrl"
-                             *ngIf="imageUrl"
+                             *ngIf="cta.imageUrl"
                              style="max-width:446px;">
 
                     </div>
@@ -91,12 +90,12 @@
                                 <a *ngIf="cta.buttonText && cta.buttonUrl && cta.isExtUrl"
                                    target="_blank"
                                    [href]="cta.buttonUrl"
-                                   class="btn cta mb-5">
+                                   class="btn cta">
                                     {{ cta.buttonText }}
                                 </a>
                                 <a *ngIf="cta.buttonText && cta.buttonUrl && !cta.isExtUrl"
                                    [href]="cta.buttonUrl"
-                                   class="btn cta mb-5">
+                                   class="btn cta">
                                     {{ cta.buttonText }}
                                 </a>
                             </div>
@@ -107,7 +106,8 @@
 
             <!-- * Text Section Bottom * -->
             <div [innerHTML]="tsBottomBody"
-                 *ngIf="tsBottomBody && !page.body"></div>
+                 *ngIf="tsBottomBody && page.contentSectionBottom && !page.body">
+            </div>
 
         </div>
     </div>
