--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -277,7 +277,7 @@
         *ngIf="isLoggedIn">
         <a class="sidenav-link sidenav-toggle" (click)="onShowFilesToggle()">
             <i class="sidenav-icon ion ion-md-speedometer"></i>
-            <div><i class="fal fa-align-justify"></i>&nbsp;<span class="helv">Files</span></div>
+            <div><i class="fal fa-file-alt"></i>&nbsp;<span class="helv">Files</span></div>
         </a>
 
         <ul class="sidenav-menu">
