--- a/src/app/components/admin/admin-content-section/components/text-section/text-section-detail/text-section-detail.component.html
+++ b/src/app/components/admin/admin-content-section/components/text-section/text-section-detail/text-section-detail.component.html
@@ -15,7 +15,7 @@
             <a class="btn btn-default"
                *ngIf="textSection"
                matTooltip="Send For Review"
-               href="mailto: ?subject=For review: {{textSection.name}}&body=Please review this Content Section from DDW.org: https://staging.ddw.org/admin/text-section/{{textSection.id}}">
+               href="mailto: ?subject=For review on DDW: {{textSection.name}}&body=Please review this Text/Content Section from DDW.org: https://staging.ddw.org/admin/text-section/{{textSection.id}}">
                 <i class="fa fa-envelope"></i>&nbsp;Send For Review
             </a>
         </div>
@@ -72,7 +72,7 @@
                             <!-- * TODO: Change from staging.ddw.org to ddw.org  * -->
                             <a class="btn btn-success"
                                matTooltip="Send For Review"
-                               href="mailto: ?subject=For review: {{textSection.name}}&body=Please review this Content Section from DDW.org: https://staging.ddw.org/admin/text-section/{{textSection.id}}">
+                               href="mailto: ?subject=For review on DDW: {{textSection.name}}&body=Please review this Text/Content Section from DDW.org: https://staging.ddw.org/admin/text-section/{{textSection.id}}">
                                 <i class="fa fa-envelope"></i>&nbsp;Send For Review
                             </a>
                         </div>
