--- a/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.css
+++ b/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.css
@@ -9,6 +9,11 @@ th {
     line-height: 1.5;
 }
 
+tr > td, thead > tr > th {
+    /*text-align: center;*/
+    vertical-align: middle;
+}
+
 td.date {
     line-height: 1.5;
 }
