--- a/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-list/admin-contact-us-list.component.html
+++ b/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-list/admin-contact-us-list.component.html
@@ -45,7 +45,8 @@
                 <table id="user-list" class="table table-striped table-bordered table-hover">
                     <thead>
                     <tr>
-                        <th scope="col" style="vertical-align: top;">Contact</th>
+                        <th scope="col" style="vertical-align:top; text-align:center;">Viewed</th>
+                        <th scope="col" style="vertical-align:top;">Contact</th>
                         <th scope="col" style="vertical-align: top;">Email</th>
                         <!--<th scope="col" style="vertical-align: top;">Phone Number</th>-->
                         <th scope="col" style="vertical-align: top;">Subject</th>
@@ -55,6 +56,23 @@
                     </thead>
                     <tbody>
                     <tr *ngFor="let contact of contacts$ | async" [class.viewed]="contact.viewed">
+                        <td scope="col" style="text-align:center;">
+                            <input type="checkbox"
+                                   style="cursor:pointer;"
+                                   *ngIf="!contact.viewed"
+                                   id="unviewed"
+                                   matTooltip="Mark as viewed"
+                                   (click)="onMarkViewed(contact.$key)">
+
+                            <input type="checkbox"
+                                   style="cursor:pointer;"
+                                   *ngIf="contact.viewed"
+                                   id="viewed"
+                                   checked
+                                   matTooltip="Un-Mark as viewed"
+                                   (click)="onUnmarkViewed(contact.$key)">
+
+                        </td>
                         <td scope="col">
                             <a [routerLink]="['/admin/contacts/', contact.$key]"
                                class="text-decoration-none"
@@ -66,7 +84,7 @@
                             <i class="fa fa-envelope"></i> {{ contact.email | slice:0:25 }}
                         </td>
                         <!--<td scope="col">-->
-                            <!--<i class="fa fa-phone"></i> {{ contact.phoneNumber }}-->
+                        <!--<i class="fa fa-phone"></i> {{ contact.phoneNumber }}-->
                         <!--</td>-->
                         <td scope="col">
                             <i class="fa fa-code-branch"></i>&nbsp;{{ contact.subject | slice:0:30 }}
@@ -75,27 +93,15 @@
                             {{ contact.sentDate | date:'medium' }}
                         </td>
                         <td scope="col" class="text-center">
-                            <a class="btn btn-default btn-sm icon-btn md-btn-flat user-tooltip ml-2 mt-1"
-                               *ngIf="!contact.viewed"
-                               matTooltip="Mark as viewed"
-                               (click)="onMarkViewed(contact.$key)">
-                                <i class="fal fa-square"></i>
-                            </a>
-                            <a class="btn btn-default btn-sm icon-btn md-btn-flat user-tooltip ml-2 mt-1"
-                               *ngIf="contact.viewed"
-                               matTooltip="Un-Mark as viewed"
-                               (click)="onUnmarkViewed(contact.$key)">
-                                <i class="fa fa-check-square"></i>
-                            </a>
-                            <a class="btn btn-secondary btn-sm icon-btn md-btn-flat user-tooltip ml-2 mt-1"
+                            <a class="btn btn-outline-light text-secondary btn-sm icon-btn md-btn-flat user-tooltip ml-2 mt-1"
                                matTooltip="View contact details"
                                [routerLink]="['/admin/contacts/', contact.$key]">
-                                <i class="fa fa-address-book"></i>&nbsp;
+                                <i class="fa fa-address-book"></i>
                             </a>
-                            <a class="btn btn-danger btn-sm icon-btn md-btn-flat user-tooltip ml-2 mt-1"
+                            <a class="btn btn-outline-light text-danger btn-sm icon-btn md-btn-flat user-tooltip ml-2 mt-1"
                                matTooltip="Delete Contact"
                                (click)="onDeleteContact(contact.$key)">
-                                <i class="fa fa-trash-alt text-white"></i>
+                                <i class="fa fa-trash-alt"></i>
                             </a>
                         </td>
                     </tr>
